update with new changes